fixed position of header svg on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -246,7 +246,7 @@ p {
     @include position;
     height: auto;
     position: absolute;
-    top: 120px;
+    top: 100px;
     z-index: 1;
     max-width: 500px;
 
